--- a/index.html
+++ b/index.html
@@ -2,47 +2,72 @@
 <html lang="en">
 
 <head>
+    <!-- Meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+
+    <!-- jQuery UI CSS -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+
     <title>Weather Forecast</title>
 </head>
 
 <body class="bg-warning">
+    <!-- Header -->
     <header class="border bg-primary bg-gradient text-light text-center">
         <h1 class="m-2 p-0">Weather Forecast</h1>
     </header>
 
     <main class="row text-center text-light m-0 p-0">
         <div class="col-12 col-md-3 p-2">
+            <!-- Search form -->
             <h2 class="bg-primary p-2">Search for a city:</h2>
             <form id="search-form" class="m-2">
                 <input id="search-input" type="text" class="form-control m-auto" placeholder="City" />
                 <button class="btn btn-info bg-primary border-primary mt-2 text-light" type="submit">Search</button>
             </form>
+
+            <!-- Recent searches -->
             <h2 class="bg-primary p-2">Recent Searches:</h2>
             <ul id="saved-cities" class="list-group bg-warning"></ul>
         </div>
 
         <div class="col-12 col-md-9 p-2 text-light">
+            <!-- Current weather -->
             <h3 class="bg-primary p-2">Showing results for: <span id="result-text"></span></h3>
             <div id="current-weather" class="container-fluid justify-content-evenly row m-0 p-1"></div>
 
+            <!-- 5-Day forecast -->
             <h3 class="bg-primary p-2">5-Day Forecast:</h3>
             <div id="forecast" class="container-fluid justify-content-evenly row m-0 p-1"></div>
         </div>
     </main>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <!-- jQuery UI -->
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+
+    <!-- Day.js -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
         integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+
+    <!-- Custom JS -->
     <script src="./assets/js/script.js"></script>
 </body>
 
